# RedSoftTestTask

./: .env.example  README.md  pyproject.toml  ruff.toml
infra/: docker-compose.yml
src/config/: celery.py  settings.py  urls.py
src/people/: apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
src/people/migrations/: 0001_initial.py
src/people/services/: external_api.py
